# Memoir

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README-node.md  README.md  package.json  pyproject.toml  tsconfig.json  vcpkg.json
.github/workflows/: build.yml  seed-r2-cache.yml
docs/: engine.md  node-bindings-spec.md
include/memoir/: capture_engine.h  recording_session.h  version.h
lib/: index.ts  meta.ts  native.ts  types.ts
memoir/: __init__.py  _engine.py  _meta.py  _types.py
memoir_capture/: __init__.py  _engine.py  _meta.py
src/bindings/: module.cpp  node_module.cpp
src/core/: capture_engine.cpp  window_finder.cpp
src/recording/: recording_session.cpp
tests/node/: capture.test.ts  color-cycle.test.ts  lifecycle.test.ts  meta.test.ts  recording.test.ts  split-recording.test.ts  window-close.test.ts
tests/python/: record_10s.py  test_capture.py  test_color_cycle.py  test_import.py  test_lifecycle.py  test_meta_reader.py  test_recording.py
